{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 88,
  "lineage": "9a868ed1-742a-142d-3b33-d827286ddbde",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0cc7933f48ef945ea",
            "id": "rtb-0cc7933f48ef945ea",
            "owner_id": "043947433954",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06136a58016d284d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foo-terraform-rt"
            },
            "vpc_id": "vpc-0b77332e959c51a6b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "my-foo-tgw",
      "provider": "module.transit_gateway.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:043947433954:transit-gateway/tgw-0faddf40a7c21b495",
            "association_default_route_table_id": "tgw-rtb-0c62a122874998b6c",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "my-foo-transit-gateway",
            "dns_support": "enable",
            "id": "tgw-0faddf40a7c21b495",
            "owner_id": "043947433954",
            "propagation_default_route_table_id": "tgw-rtb-0c62a122874998b6c",
            "tags": {
              "Name": "my-foo-transit-gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "my-foo-transit-gateway-attachment",
      "provider": "module.transit_gateway.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-044f61ae804d3c247",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0b677de9f5b680e7d",
              "subnet-0e42ab06872fc58a2"
            ],
            "tags": {
              "Name": "my-foo-tgw-vpc-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0faddf40a7c21b495",
            "vpc_id": "vpc-0b77332e959c51a6b",
            "vpc_owner_id": "043947433954"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.my-foo-tgw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-foo-eip",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0918416e58b5467b3",
            "public_dns": "ec2-54-83-6-186.compute-1.amazonaws.com",
            "public_ip": "54.83.6.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-foo-instance",
      "each": "list",
      "provider": "module.ec2.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02354e95b39ca8dec",
            "arn": "arn:aws:ec2:us-east-1:043947433954:instance/i-02d575f85044a9719",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d575f85044a9719",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-foo-terraform-key-new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c382e52dac753672",
            "private_dns": "ip-10-0-0-63.ec2.internal",
            "private_ip": "10.0.0.63",
            "public_dns": "ec2-54-208-93-26.compute-1.amazonaws.com",
            "public_ip": "54.208.93.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00fa80c6f379daa9c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b677de9f5b680e7d",
            "tags": {
              "Name": "my-instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a0069ac3a8a27e1"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.myfoo-key",
            "module.vpc.aws_security_group.foo_sg",
            "module.vpc.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02354e95b39ca8dec",
            "arn": "arn:aws:ec2:us-east-1:043947433954:instance/i-0d771c8f873ee9b89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d771c8f873ee9b89",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-foo-terraform-key-new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09de0be66f34e13ab",
            "private_dns": "ip-10-0-2-138.ec2.internal",
            "private_ip": "10.0.2.138",
            "public_dns": "ec2-3-89-86-111.compute-1.amazonaws.com",
            "public_ip": "3.89.86.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03d2b74634ca63edb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e42ab06872fc58a2",
            "tags": {
              "Name": "my-instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a0069ac3a8a27e1"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.myfoo-key",
            "module.vpc.aws_security_group.foo_sg",
            "module.vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043947433954:internet-gateway/igw-06136a58016d284d2",
            "id": "igw-06136a58016d284d2",
            "owner_id": "043947433954",
            "tags": {
              "Name": "foo-terraform-igw"
            },
            "vpc_id": "vpc-0b77332e959c51a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "my-tgw-route",
      "provider": "module.vpc.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03f538a7ff4cd6512",
            "owner_id": "043947433954",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06136a58016d284d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foo-terraform-rt"
            },
            "vpc_id": "vpc-0b77332e959c51a6b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "each": "list",
      "provider": "module.vpc.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foo_sg",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043947433954:security-group/sg-00a0069ac3a8a27e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a0069ac3a8a27e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-foo-sg",
            "name_prefix": "",
            "owner_id": "043947433954",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b77332e959c51a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4240878543",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00a0069ac3a8a27e1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.foo_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_inbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1469896385",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a0069ac3a8a27e1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.foo_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3776351092",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a0069ac3a8a27e1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.foo_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043947433954:subnet/subnet-044ca56bbeae533a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-044ca56bbeae533a5",
            "map_public_ip_on_launch": true,
            "owner_id": "043947433954",
            "tags": {
              "Name": "my-foo-private-subnet.1"
            },
            "vpc_id": "vpc-0b77332e959c51a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043947433954:subnet/subnet-04ce67bf61e5ad2fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04ce67bf61e5ad2fb",
            "map_public_ip_on_launch": true,
            "owner_id": "043947433954",
            "tags": {
              "Name": "my-foo-private-subnet.2"
            },
            "vpc_id": "vpc-0b77332e959c51a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043947433954:subnet/subnet-0b677de9f5b680e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b677de9f5b680e7d",
            "map_public_ip_on_launch": true,
            "owner_id": "043947433954",
            "tags": {
              "Name": "my-foo-public-subnet.1"
            },
            "vpc_id": "vpc-0b77332e959c51a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043947433954:subnet/subnet-0e42ab06872fc58a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e42ab06872fc58a2",
            "map_public_ip_on_launch": true,
            "owner_id": "043947433954",
            "tags": {
              "Name": "my-foo-public-subnet.2"
            },
            "vpc_id": "vpc-0b77332e959c51a6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043947433954:vpc/vpc-0b77332e959c51a6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcd21d9550b435ed",
            "default_route_table_id": "rtb-0cc7933f48ef945ea",
            "default_security_group_id": "sg-0cfa6ae54432596a3",
            "dhcp_options_id": "dopt-ae4ef7d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b77332e959c51a6b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cc7933f48ef945ea",
            "owner_id": "043947433954",
            "tags": {
              "Name": "foo-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}